SDGF-139: Fix version that aren't JDK8 compatible