@@ -66,10 +66,6 @@ dependencies {
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
 }
 
-tasks.withType(JavaForkOptions) {
-    jvmArgs "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"
-}
-
 test {
     useJUnitPlatform()
 }
